Some colour adjustments and links added to portfolio section. Also fixed legend centering issue on firefox

--- a/portfolio.scss
+++ b/portfolio.scss
@@ -104,7 +104,9 @@ nav {
 
 //OPAQUE NAVBAR//
 .solid-navbar {
-  background: rgba(100, 100, 150, 0.9);
+  background: #2b2d42;
+  opacity: 90%;
+  border-bottom: 0.1px solid black;
 }
 
 .opaque-navbar {
@@ -305,163 +307,184 @@ nav {
 //PORTFOLIO START//
 #portfolio {
   padding: 15px;
-  background-color: #edf2f4;
-}
-
-.portfolio-title {
-  margin: 5px 0px 15px 0px;
-  font-size: 40px;
-  color: rgb(30, 25, 25);
-  grid-column: 1/-1;
-  display: grid;
-  grid-template-columns: 1fr auto 1fr;
-  grid-gap: 15px;
-  align-items: center;
-  &:before,
-  &:after {
-    display: block;
-    content: "";
-    height: 7px;
-    background: linear-gradient(
-      to var(--direction, left),
-      rgb(30, 25, 25),
-      transparent
-    );
-  }
-  &:after {
-    --direction: right;
-  }
-}
-
-$color_white: #fff;
-$color_prime: rgb(100, 100, 150);
-$color_grey: #e2e2e2;
-$color_grey_dark: #a2a2a2;
-
-.portfolio-card {
-  display: flex;
-  flex-direction: column;
-  color: black;
-  margin: 2rem auto;
-  box-shadow: 0 3px 7px -1px rgba(#000, 0.1);
-  margin-bottom: 1.6%;
-  background: $color_white;
-  line-height: 1.4;
-  font-family: sans-serif;
-  border-radius: 5px;
-  overflow: hidden;
-  z-index: 0;
-  &:hover {
-    .photo {
-      transform: scale(1.1) rotate(2deg);
+  background: #f1f1f1;
+  .portfolio-title {
+    margin: 5px 0px 15px 0px;
+    font-size: 40px;
+    color: rgb(30, 25, 25);
+    grid-column: 1/-1;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    grid-gap: 15px;
+    align-items: center;
+    &:before,
+    &:after {
+      display: block;
+      content: "";
+      height: 7px;
+      background: linear-gradient(
+        to var(--direction, left),
+        rgb(30, 25, 25),
+        transparent
+      );
+    }
+    &:after {
+      --direction: right;
     }
   }
-  .meta {
-    position: relative;
-    z-index: 0;
-    height: 200px;
-  }
-  .photo {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-size: cover;
-    background-position: center;
-    transition: transform 0.2s;
-  }
 
-  .portfolio-desc {
-    padding: 1rem;
+  $color_white: #fff;
+  $color_purple: #2b2d42;
+  $color_grey: #e2e2e2;
+  $color_grey_dark: #a2a2a2;
+
+  .portfolio-card {
+    display: flex;
+    flex-direction: column;
+    color: black;
+    margin: 2rem auto;
+    box-shadow: 0 3px 7px -1px rgba(#000, 0.1);
+    margin-bottom: 1.6%;
     background: $color_white;
-    position: relative;
-    z-index: 1;
-    h1,
-    h2 {
-      font-family: Poppins, sans-serif;
-    }
-    h1 {
-      line-height: 1;
-      margin: 0;
-      font-size: 1.7rem;
-    }
-    h2 {
-      font-size: 1rem;
-      font-weight: 300;
-      text-transform: uppercase;
-      color: $color_grey_dark;
-      margin-top: 5px;
-    }
-    .open-link {
-      text-align: center;
-      text-decoration: none;
-      color: black;
-      border: 2px solid #242424;
-      border-radius: 2px;
-      padding: 5px;
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      left: 40%;
-      &:hover {
-        border: 2px solid purple;
-        color: purple;
+    line-height: 1.4;
+    font-family: sans-serif;
+    border-radius: 5px;
+    overflow: hidden;
+    z-index: 0;
+    &:hover {
+      .photo {
+        transform: scale(1.1) rotate(2deg);
       }
     }
-  }
-  p {
-    position: relative;
-    margin: 1rem 0 0;
-    &:first-of-type {
-      margin-top: 1.25rem;
-      &:before {
-        content: "";
-        position: absolute;
-        height: 5px;
-        background: $color_prime;
-        width: 35px;
-        top: -0.75rem;
-        border-radius: 3px;
-      }
-    }
-  }
-
-  @media (min-width: 640px) {
-    flex-direction: row;
-    max-width: 90%;
     .meta {
-      flex-basis: 40%;
-      height: 300px;
+      position: relative;
+      z-index: 0;
+      height: 200px;
     }
+    .photo {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-size: cover;
+      background-position: center;
+      transition: transform 0.2s;
+    }
+
     .portfolio-desc {
-      flex-basis: 65%;
-      &:before {
-        transform: skewX(-2deg);
-        content: "";
-        background: #fff;
-        width: 30px;
+      padding: 1rem;
+      background: $color_white;
+      position: relative;
+      z-index: 1;
+      h1,
+      h2 {
+        font-family: Poppins, sans-serif;
+      }
+      h1 {
+        line-height: 1;
+        margin: 0;
+        font-size: 1.7rem;
+      }
+      h2 {
+        font-size: 1rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        color: $color_grey_dark;
+        margin-top: 5px;
+      }
+      .open-link {
+        text-align: center;
+        text-decoration: none;
+        color: #2b2d42;
+        border: 2px solid $color_purple;
+        border-radius: 2px;
+        padding: 5px;
         position: absolute;
-        left: -10px;
-        top: 0;
         bottom: 0;
-        z-index: -1;
+        right: 0;
+        left: 40%;
+        &:hover {
+          border: 2px solid rgb(100, 100, 150);
+          color: rgb(100, 100, 150);
+          text-decoration: underline;
+        }
       }
     }
-    &.alt {
-      flex-direction: row-reverse;
-      .portfolio-desc {
+    p {
+      position: relative;
+      &:first-of-type {
+        margin-top: 1.25rem;
         &:before {
-          left: inherit;
-          right: -10px;
-          transform: skew(2deg);
-        }
-        a {
-          right: 40%;
-          left: 0;
-          bottom: 0;
+          content: "";
+          position: absolute;
+          height: 5px;
+          background: $color_purple;
+          width: 35px;
+          top: -0.75rem;
+          border-radius: 3px;
         }
       }
+    }
+
+    @media (min-width: 640px) {
+      flex-direction: row;
+      max-width: 90%;
+      .meta {
+        flex-basis: 40%;
+        height: 300px;
+      }
+      .portfolio-desc {
+        flex-basis: 65%;
+        &:before {
+          transform: skewX(-2deg);
+          content: "";
+          background: #fff;
+          width: 30px;
+          position: absolute;
+          left: -10px;
+          top: 0;
+          bottom: 0;
+          z-index: -1;
+        }
+      }
+      &.alt {
+        flex-direction: row-reverse;
+        .portfolio-desc {
+          &:before {
+            left: inherit;
+            right: -10px;
+            transform: skew(2deg);
+          }
+          a {
+            right: 40%;
+            left: 0;
+            bottom: 0;
+          }
+        }
+      }
+    }
+  }
+  .see-more-of-me {
+    display: flex;
+    justify-content: center;
+  }
+  .see-more {
+    position: relative;
+    text-decoration: none;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #fff;
+    text-align: center;
+    margin: 20px 10px 5px 10px;
+    padding: 10px;
+    border: 1px solid white;
+    grid-column: 1/-1;
+    justify-self: center;
+    box-shadow: 5px 5px 10px grey;
+    text-decoration: none;
+    color: #111;
+    i {
+      font-size: 50px;
     }
   }
 }
@@ -503,7 +526,6 @@ $color_grey_dark: #a2a2a2;
   .submit {
     width: 150px;
     height: 40px;
-    cursor: pointer;
     margin: 0 auto;
     border: 2px solid rgb(230, 230, 230);
     -webkit-border-radius: 40px;
@@ -552,7 +574,7 @@ $color_grey_dark: #a2a2a2;
     a:hover,
     nav a:focus {
       transition: transform 0.1s;
-      transform: scale(1.05);
+      transform: scale(1.1);
       color: white;
     }
   }
